# annil-web

./: .gitignore  404.html  CNAME  Cargo.toml  index-82a653d11310b9ba.js  index-82a653d11310b9ba_bg.wasm  index-88ce0153cc0d9cda.js  index-88ce0153cc0d9cda_bg.wasm  index-8b418069d02e05a7.js  index-8b418069d02e05a7_bg.wasm  index.html  index_dev.html  package.json  tailwind.min-1de33feac308a890.css  tailwind.min-3f61dc0193b39180.css
.github/workflows/: gh-pages.yaml
src/: main.rs
src/components/: bottom_player.rs  header.rs  icons.rs  mod.rs
src/router/: auth.rs  mod.rs
src/utils/: mod.rs
src/views/: index.rs  login.rs  mod.rs  play.rs
styles/: tailwind.config.js
