[package]
name = "annil-web"
version = "0.1.0"
edition = "2018"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/" }
yew-router = { git = "https://github.com/yewstack/yew/" }
web-sys = "0.3.52"

reqwasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"

wee_alloc = "0.4.5"

log = "0.4.6"
wasm-logger = "0.2.0"

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
